--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.application.name=buy-a-llama-license
 spring.profiles.active=test
+
+gov-pay.base-url=${PAY_BASE_URL}
+gov-pay.api-key=${API_KEY}
